# varikey

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
src/engine/: CMakeLists.txt  engine.c  engine.cpp  engine.h  engine.hpp  engine_defines.hpp  engine_defines_gossenmetrawatt.hpp  engine_defines_varikey.hpp  engine_event.hpp  engine_event_handler.cpp  engine_event_handler.hpp  engine_variant.hpp
src/engine/backlight/: backlight3.cpp  backlight3.hpp  backlight_10bwdb.hpp  backlight_color.hpp  backlight_demo.hpp  backlight_mode.hpp  backlight_settings.hpp
src/engine/display/: display.cpp  display_position.hpp  font_identifier.hpp  fonts.c  fonts.h  image_frame.c  image_frame.h  image_gmc.c  image_gmc.h  image_heart.c  image_heart.h  image_identifier.hpp  image_type.hpp  images.c  images.h
src/engine/gpio/: engine_gpio.cpp  engine_gpio.hpp
src/engine/identity/: .gitignore  build_number.h  identity.hpp  identity_10bwdb.hpp  revision.h
src/engine/interface/: engine_event.hpp  engine_event_queue.cpp  engine_event_queue.hpp
src/engine/keyboard/: keyboard.c  keyboard.cpp  keyboard.h  keyboard.hpp  keyboard_keycode.h  keyboard_keycode_10bwdb.hpp  keyboard_keycode_demo.hpp  keyboard_type.hpp  keypad.cpp  keypad.hpp  keypad_backlight_command.hpp  keypad_display_command.hpp  keypad_event.hpp  usb_descriptors.c  usb_descriptors.h
src/engine/keypad/: keypad.cpp  keypad.hpp  keypad_keycode.cpp  keypad_keycode.hpp  keypad_keycode_10bwdb.cpp  keypad_keycode_10bwdb.hpp  keypad_keycode_type.hpp  keypad_keycode_varikey.cpp  keypad_keycode_varikey.hpp  keypad_modifiers.cpp  keypad_modifiers.hpp
src/engine/parameter/: param_backlight.cpp  param_backlight.hpp  param_display.cpp  param_display.hpp  param_features.cpp  param_features.hpp  param_keypad.cpp  param_keypad.hpp  param_maintainer.cpp  param_maintainer.hpp  param_mapping.cpp  param_mapping.hpp  param_position.cpp  param_position.hpp  param_serial_number.cpp  param_serial_number.hpp  param_user.cpp  param_user.hpp  parameter_identifier.cpp  parameter_identifier.hpp
src/engine/platform/: adp5585.c  adp5585.h  backlight.c  backlight.h  display.c  display.h  keypad.c  keypad.h  keypad_event.h  platform.c  platform.h  platform_defines.hpp  ssd1306.c  ssd1306.h  ws2812.c  ws2812.h
src/platform/: CMakeLists.txt  platform.cpp  platform.hpp  platform_defines.hpp
src/platform/board/: board.cpp  board.hpp  board_assembly.cpp  board_assembly.hpp  board_defines.hpp  board_gossenmetrawatt_1_0.cpp  board_gossenmetrawatt_1_0.hpp  board_keypad.cpp  board_keypad.hpp  board_type.hpp  board_varikey_1_0.cpp  board_varikey_1_0.hpp
src/pulp/: CMakeLists.txt  bytering.c  bytering.cpp  bytering.h  bytering.hpp  checksum.c  checksum.cpp  checksum.h  checksum.hpp  chunk.h  component_state.hpp  guard_macros.h  macros.c  macros.h  macros.hpp  random.c  random.cpp  random.h  random.hpp  temperature.c  temperature.h  temperature_interface.hpp  ticker.c  ticker.h  timestamp.c  timestamp.h  types.c  types.h
src/registry/: CMakeLists.txt  param_adc.c  param_adc.cpp  param_adc.h  param_adc.hpp  param_backlight.c  param_backlight.cpp  param_backlight.h  param_backlight.hpp  param_button.c  param_button.cpp  param_button.h  param_button.hpp  param_display.c  param_display.cpp  param_display.h  param_display.hpp  param_features.c  param_features.cpp  param_features.h  param_features.hpp  param_key.c  param_key.cpp  param_key.h  param_key.hpp  param_keypad.cpp  param_keypad.hpp  param_maintainer.c  param_maintainer.cpp  param_maintainer.h  param_maintainer.hpp  param_mapping.cpp  param_mapping.hpp  param_position.c  param_position.cpp  param_position.h  param_position.hpp  param_serial_number.c  param_serial_number.cpp  param_serial_number.h  (+19 more)
src/registry/parameter/: param_backlight.cpp  param_backlight.hpp  param_display.cpp  param_display.hpp  param_features.cpp  param_features.hpp  param_keypad.cpp  param_keypad.hpp  param_maintainer.cpp  param_maintainer.hpp  param_mapping.cpp  param_mapping.hpp  param_position.cpp  param_position.hpp  param_serial_number.cpp  param_serial_number.hpp  param_user.cpp  param_user.hpp  parameter_identifier.cpp  parameter_identifier.hpp
src/test/unit-tests/: CMakeLists.txt  test_checksum.cpp  test_random.cpp  unit_test.cpp  unit_test.hpp
varikey_library/: CMakeLists.txt  build_number.h  varikey.cpp  varikey.hpp
varikey_library/engine/: engine.cpp  engine.hpp  engine_defines.hpp  engine_defines_gmc.hpp  engine_defines_gossenmetrawatt.hpp  engine_defines_varikey.hpp  engine_defines_varikey_15sbla.hpp  engine_event.hpp  engine_event_handler.cpp  engine_event_handler.hpp  engine_variant.hpp
varikey_library/engine/backlight/: backlight.cpp  backlight.hpp  backlight3.cpp  backlight3.hpp  backlight_10bwdb.hpp  backlight_15sbla.hpp  backlight_channel.hpp  backlight_color.hpp  backlight_demo.hpp  backlight_program.hpp  backlight_settings.hpp  backlight_settings_10bwdb.hpp  backlight_settings_15sbla.hpp  backlight_settings_demo.hpp
varikey_library/engine/display/: display.cpp  display.hpp  display_position.hpp
varikey_library/engine/gpio/: engine_gpio.cpp  engine_gpio.hpp
varikey_library/engine/keypad/: keypad.cpp  keypad.hpp  keypad_keycode.cpp  keypad_keycode.hpp  keypad_keycode_10bwdb.cpp  keypad_keycode_10bwdb.hpp  keypad_keycode_15sbla.cpp  keypad_keycode_15sbla.hpp  keypad_keycode_type.hpp  keypad_keycode_varikey.cpp  keypad_keycode_varikey.hpp  keypad_modifiers.cpp  keypad_modifiers.hpp
varikey_library/identity/: identity.hpp  identity_10bwdb.hpp  identity_15sbla.hpp  identity_demo.hpp  identity_settings.hpp
varikey_library/platform/: platform_defines.hpp
varikey_library/platform/board/: board_assembly.cpp  board_assembly.hpp  board_defines.hpp
varikey_library/pulp/: array_length.hpp  bytering.cpp  bytering.hpp  checksum.cpp  checksum.hpp  chunk.h  component_interface.hpp  component_state.hpp  macros.cpp  macros.hpp  random.cpp  random.hpp
varikey_library/registry/: parameter.cpp  parameter.hpp  registry.cpp  registry.hpp  registry_defines.hpp  registry_interface.cpp  registry_interface.hpp
(+569 files in other folders)
